--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -365,3 +365,12 @@
     -fx-background-radius: 2;
     -fx-font-size: 11;
 }
+
+.is_archived_flair {
+    -fx-text-fill: white;
+    -fx-background-color: #f60202;
+    -fx-padding: 1 3 1 3;
+    -fx-border-radius: 2;
+    -fx-background-radius: 2;
+    -fx-font-size: 11;
+}
