--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -366,9 +366,9 @@
     -fx-font-size: 11;
 }
 
-.is_archived_flair {
+.isArchivedFlair {
     -fx-text-fill: white;
-    -fx-background-color: #f60202;
+    -fx-background-color: #f66666;
     -fx-padding: 1 3 1 3;
     -fx-border-radius: 2;
     -fx-background-radius: 2;
