--- a/src/main/resources/view/RecruitListCard.fxml
+++ b/src/main/resources/view/RecruitListCard.fxml
@@ -29,7 +29,7 @@
                        text="Archived"
                        visible="false"
                        managed="false"
-                       styleClass="is_archived_flair"/>
+                       styleClass="isArchivedFlair"/>
             </HBox>
             <FlowPane fx:id="tags" />
             <Label fx:id="phone" styleClass="cell_small_label" text="\$phone" />
